# twitch2seikasay

./: .gitignore  Cargo.toml  Config.toml.sample  Readme.md
.github/workflows/: rust.yml
twitch2seikasay/src/: main.rs
