[package]
name = "twitch2seikasay"
version = "0.1.0"
authors = ["freakhill <johan.gall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
futures = "0.3.0"
toml = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2.1"
tokio = { version = "1", features = ["full"] }
serde = "1.0.97"
serde_derive = "1.0"
